# edukoi

./: HISTORY.md  LICENSE  README.md  init.py  pyproject.toml
edukoi/: __init__.py  core.py
scripts/: edukoi-art.py  test.py
