[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
known_third_party = ["mediapipe","mediapipe-silicon"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["edukoi*"]
exclude = ["scripts*"]

[project]
name = "edukoi"
version = "0.2.3"
authors = [
  { name="Michele Ginolfi", email="micheleginolfi@gmail.com" },
  { name="Luca Di Mascolo", email="lucadimascolo@gmail.com" },
]
description = "A sonification tool"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = ["opencv-python","pygame","numpy","pynput"]

[project.urls]
"Homepage" = "https://github.com/lucadimascolo/edukoi"
"Bug Tracker" = "https://github.com/lucadimascolo/edukoi/issues"

[project.scripts]
edukoi = "edukoi:basic"
edukoi-art = "edukoi:art"
edukoi-test = "edukoi:test"
